--- a/css/custom.css
+++ b/css/custom.css
@@ -16,13 +16,13 @@ body {
 
 
 .header {
-  background-color:#7DB9B3; 
+  background-color:#9CB8CD; 
   width:96%;
   font-family:'Lato';
 }
 
 .background {
-  background-color:#166678;
+  background-color:#5483A5;
   width:96%;
   font-family:'Lato';
   height:100%;
@@ -30,22 +30,26 @@ body {
 }
 
 .container {
-  background-color:#2E3837; 
+  background-color:#E2EFF1; 
   width:100%;
   font-family:'Lato';
   min-height:100%;
 }
 
+.container-nav  {
+  background-color:#37566C; 
+}
+
 table {
   width:96%;
   border: 3px solid;
-  border-color: #2E3837;
+  border-color: #37566C;
 }
 
 th, td {
     padding: 10px;
     border: 2px solid;
-    border-color: #2E3837;
+    border-color: #37566C;
 
 } 
 
@@ -54,33 +58,71 @@ th, td {
 }
 
 .navbar-default {
-  background-color:#7DB9B3;
-  border-color:#7DB9B3;
+  background-color:#9CB8CD;
+  border-color:#9CB8CD;
+  padding-bottom:3px;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-  background-color:#7DB9B3;
-  color:#2E3837;
+  background-color:#9CB8CD;
+  color:#37566C;
   
+}
+
+.navbar navbar-default navbar-fixed-top {
+  background-color:#37566C;
 }
 
 iframe {
   padding:10px;
-  background-color:#2E3837;
+  background-color:#37566C;
   width:320px;
   height:240px;
 }
 
 .button-grp {
   padding:10px;
-  background-color:#2E3837;
+  background-color:#37566C;
   width:320px;
+}
+
+.post-preview, .post-subtitle {
+  color:#E2EFF1;
+  background-color:#5483A5;
+}
+
+.post-title {
+  color:#37566C;
+  background-color:#9CB8CD;
+  align:right;
+}
+
+.img-thumbnail {
+  background-color:#37566C;
+  border-color:#37566C;
+  height:150px;
+  width:200px;
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+.blog-descriptions {
+  
 }
 
 
 /*
-#2E3837
-#166678
-#7DB9B3
-#E1F6F4
+
+Dark
+#37566C
+
+Medium Dark
+#5483A5
+
+Medium Light
+#9CB8CD
+
+Light
+#E2EFF1
+
 */
