--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,7 @@ body {
 }
 
 .background {
-  background-color:#5483A5;
+  background-color:#D1E6E9;
   width:96%;
   font-family:'Lato';
   height:100%;
@@ -77,15 +77,37 @@ th, td {
 
 iframe {
   padding:10px;
-  background-color:#37566C;
+  background-color:#9CB8CD;
   width:320px;
   height:240px;
+  margin-top:10px;
+}
+
+.purchase-btn {
+  margin-top:5px;
+}
+
+.render-thumb {
+  width:80px;
+  margin:5px;
+  border-style:solid;
+  border-color:#1A2934;
+  border-width:2px;
+}
+
+.render-grp {
+  background-color:#9CB8CD;
 }
 
 .button-grp {
   padding:10px;
-  background-color:#37566C;
+  background-color:#9CB8CD;
   width:320px;
+}
+
+.model-grp {
+  background-color:#37566C;
+  padding-bottom:10px;
 }
 
 .post-preview, .post-subtitle {
@@ -105,6 +127,11 @@ iframe {
 .blog-top {
   background-color:#37566C;
   padding:10px;
+}
+
+.col-md-offset-1 {
+  margin-left:5px;
+  width:99%;
 }
 
 h2 {
@@ -183,6 +210,9 @@ h2:hover {
 
 
 /*
+
+Dark Dark
+#1A2934
 
 Dark
 #37566C
