--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,11 @@
-#h1 {
+h1 {
   font-family:'Lato';
+  line-height:1.4;
+}
+
+h3 {
+  line-height:1.2;
+  color:#1A2934;
 }
 
 html {
@@ -15,6 +21,9 @@ body {
   background-color:#D1E6E9;
 }
 
+.btn-primary {
+  margin-right:5px;
+}
 
 .header {
   background-color:#9CB8CD; 
@@ -68,7 +77,7 @@ th, td {
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
   background-color:#9CB8CD;
   color:#37566C;
-    outline-color:#37566C;
+  outline-color:#37566C;
   color:#37566C;
   outline-style:solid;
   outline-width: 3px;
@@ -77,6 +86,10 @@ th, td {
 
 .navbar navbar-default navbar-fixed-top {
   background-color:#37566C;
+}
+
+.nav-home {
+
 }
 
 .active {
@@ -108,18 +121,14 @@ iframe {
 }
 
 .render-grp {
-  background-color:#9CB8CD;
-}
-
-.button-grp {
-  padding:10px;
-  background-color:#9CB8CD;
-  width:320px;
+  margin-top:10px;
+  background-color:#37566C;
+  padding-top:5px;
+  padding-bottom:5px;
 }
 
 .model-grp {
-  background-color:#37566C;
-  padding-bottom:10px;
+  background-color:#5483A5;
 }
 
 .post-preview, .post-subtitle {
@@ -147,18 +156,19 @@ iframe {
 }
 
 h2 {
-  line-height:1.5;
+  line-height:1.3;
   padding-left:10px;
   padding-right:10px;
   text-decoration:none;
   -webkit-transition: outline-color 0.5s;
   outline-color:transparent;
   float:left;
+  color:#1A2934;
 }
 
 h2:hover {
-  outline-color:#37566C;
-  color:#37566C;
+  outline-color:#1A2934;
+  color:#1A2934;
   outline-style:solid;
   outline-width: 3px;
   text-decoration:none; 
@@ -221,7 +231,7 @@ h2:hover {
 }
 
 .photography-gallery {
-  background-color:#37566C;
+  background-color:#5483A5;
   padding-top:10px;
   padding-bottom:10px;
 }
@@ -235,13 +245,20 @@ h2:hover {
 }
 
 .photography-title {
-  background-color:#9CB8CD;
-  padding-bottom:5px;
-  padding-top:5px;
   margin-left:10px;
   margin-bottom:5px;
   margin-right:10px;
   margin-top:0px;
+}
+
+.photography-top-bar {
+  background-color:#37566C;
+  padding:10px;
+}
+
+.photography-bottom-bar {
+  background-color:#37566C;
+  padding:10px;
 }
 
 
