--- a/css/custom.css
+++ b/css/custom.css
@@ -63,6 +63,22 @@ body {
   min-height:100%;
 }
 
+.container-blog {
+  margin-left:-15px;
+  padding:0px;
+}
+
+.blog-row {
+  margin-left:0px;
+  margin-right:0px;
+}
+
+.container-blog-body {
+  margin:0px;
+  padding:0px;
+  width:96%;
+}
+
 .container-nav  {
   background-color:#37566C; 
 }
@@ -177,7 +193,7 @@ iframe {
 .blog-top-bar {
   background-color:#37566C;
   padding:10px;
-  width:97%;
+  width:100%;
 }
 
 .blog-title {
@@ -191,8 +207,7 @@ iframe {
 }
 
 .col-md-offset-1 {
-  margin-left:5px;
-  width:99%;
+
 }
 
 h2 {
@@ -357,6 +372,34 @@ h2:hover {
   margin-top:0px;
   color:#1A2934;
 
+}
+
+
+/* make sidebar nav vertical */ 
+@media (min-width: 768px) {
+  .sidebar-nav .navbar .navbar-collapse {
+    padding: 0;
+    max-height: none;
+  }
+  .sidebar-nav .navbar ul {
+    float: none;
+  }
+  .sidebar-nav .navbar ul:not {
+    display: block;
+  }
+  .sidebar-nav .navbar li {
+    float: none;
+    display: block;
+  }
+  .sidebar-nav .navbar li a {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  .sidebar-nav {
+    margin-top:20px;
+    margin-right:-15px;
+    padding:0px;
+  }
 }
 
 
